--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,3 +1,24 @@
 <div class="content-container">
-<h3>intro works!</h3>
+  <span>Hi, my name is</span>
+  <h2 style="padding: 15px 0">Gunars Lazdans</h2>
+
+  <div style="width: 450px">
+    <span
+      >I'm a Fronted Developer specializing in bringing designs to life, finding
+      the best solutions to meet customer needs.</span
+    >
+    <br />
+    <span style="margin-top: 15px">Scroll down to see more</span>
+  </div>
+
+  <div style="display: flex; align-items: end; flex-direction: column">
+    <span style="padding-right: 5px"> In a hurry?</span>
+    <button
+      style="height: 50px; margin: 5px; font-weight: bold"
+      type="button"
+      class="btn btn-warning"
+    >
+      Download my Resume
+    </button>
+  </div>
 </div>
