--- a/src/app/work-exp/work-exp.component.html
+++ b/src/app/work-exp/work-exp.component.html
@@ -1,26 +1,28 @@
-<div class="content-container">
-  <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-    <!-- This is the tree node template for leaf nodes -->
-    <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
-      <!-- use a disabled button to provide padding for tree leaf -->
-      <button mat-icon-button disabled></button>
-      {{ node.name }}
-    </mat-tree-node>
-    <!-- This is the tree node template for expandable nodes -->
-    <mat-tree-node
-      *matTreeNodeDef="let node; when: hasChild"
-      matTreeNodePadding
+<div class="content-container" style="padding: 25px">
+  <h3>Work Experiance</h3>
+  <mat-accordion>
+    <mat-expansion-panel
+      hideToggle
+      *ngFor="let job of this.experiances; let i = index"
     >
-      <button
-        mat-icon-button
-        matTreeNodeToggle
-        [attr.aria-label]="'Toggle ' + node.name"
-      >
-        <mat-icon class="mat-icon-rtl-mirror">
-          {{ treeControl.isExpanded(node) ? "expand_more" : "chevron_right" }}
-        </mat-icon>
-      </button>
-      {{ node.name }}
-    </mat-tree-node>
-  </mat-tree>
+      <mat-expansion-panel-header style="flex-direction: column">
+        <div style="flex-direction: row; display: flex">
+          <mat-panel-title style="font-size: 25px; padding-bottom: 5px">
+            {{ job.name }}
+          </mat-panel-title>
+          <mat-panel-description style="justify-content: right">
+            <span>{{ job.date }}</span>
+          </mat-panel-description>
+        </div>
+        <div style="flex-direction: row">
+          <span>{{ job.place }} </span>
+          <span style="color: rgba(255, 255, 255, 0.192)">
+            // Industry: {{ job.industry }}</span
+          >
+        </div>
+        <span style="padding-bottom: 5px">{{ job.time }}</span>
+      </mat-expansion-panel-header>
+      <p *ngFor="let duty of job.children">- {{ duty.name }}</p>
+    </mat-expansion-panel>
+  </mat-accordion>
 </div>
