--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,24 +1,21 @@
-<div class="content-container">
-  <span>Hi, my name is</span>
-  <h2 style="padding: 15px 0">Gunars Lazdans</h2>
-
-  <div style="width: 450px">
-    <span
-      >I'm a Fronted Developer specializing in bringing designs to life, finding
-      the best solutions to meet customer needs.</span
-    >
-    <br />
-    <span style="margin-top: 15px">Scroll down to see more</span>
+<div class="intro-wrapper">
+  <div class="intro">
+    <h2 class="slideUp">
+      <div class="text-b" style="color: #fba92c">Hi, my name is</div>
+      <h1 class="text-b" style="font-size: 60px">Gunars Lazdans</h1>
+      <span class="text-b long"> I'm a </span>
+      <span class="text-b long" style="color: #fba92c">Fronted Developer</span>
+      <span class="text-b long">
+        with powers of bringing designs to life and finding the best solutions
+        to meet customer needs</span
+      ><br />
+      <!-- <span class="text-b long" style="margin-top: 15px; color: #fba92c"
+        >Scroll down found out more</span
+      > -->
+    </h2>
   </div>
 
-  <div style="display: flex; align-items: end; flex-direction: column">
-    <span style="padding-right: 5px"> In a hurry?</span>
-    <button
-      style="height: 50px; margin: 5px; font-weight: bold"
-      type="button"
-      class="btn btn-warning"
-    >
-      Download my Resume
-    </button>
+  <div class="prof">
+    <img src="assets/me-prof2.png" alt="Me" />
   </div>
 </div>
