--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,13 +1,20 @@
-<div class="content-container" style="padding-left: 25px; padding-right: 25px">
-  <h3 hover-class="tracking-in-contract">About me</h3>
+<h3>About me</h3>
 
-  <div class="me-wrapper" style="padding: 25px">
-    <div
-      class="ed-name"
-      *ngFor="let about of this.aboutMe"
-      style="margin: 25px"
-    >
-      <div class="ed-type">- {{ about.text }}</div>
+<div class="about">
+  <div class="about_bulletpoints">
+    <div class="text text-b">
+      Enthusiastic guy with 10 years of experience in IT industry.
+    </div>
+    <div class="text text-b">
+      For the most part of my IT career, I have worked in specialisation of
+      Quality Assurance, in my latest step I have moved to the development side,
+      focusing in Front End development.
+    </div>
+    <div class="text text-b">
+      Strong logical and analytical thinking to find solutions for various
+      problems that can occur in the software development process and find
+      solutions to guarantee delivered software quality and good user
+      experience.
     </div>
   </div>
 </div>
