--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,22 +2,32 @@ main {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: #0a192f;
-  font-family: 'Calibre', 'Inter', 'San Francisco', 'SF Pro Text', -apple-system, system-ui, sans-serif;
+  background-color: #494949;
+  opacity: 1;
+  background-image: radial-gradient(#fba82c81 1px, transparent 1px),
+    radial-gradient(#fba82c81 1px, #494949 1px);
+  background-size: 40px 40px;
+  background-position: 0 0, 20px 20px;
+
+  font-family: "Calibre", "Inter", "San Francisco", "SF Pro Text", -apple-system,
+    system-ui, sans-serif;
 }
 
 .nav-container {
-  position: sticky;
+  position: fixed;
+  width: -webkit-fill-available;
   top: 0px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  margin-top: 15px;
-  padding-right: 100px;
-  padding-left: 100px;
-  background-color: rgba(10, 25, 47, 0.75);
+  padding-right: 10px;
+  padding-left: 10px;
+  /* background-color: rgba(86, 86, 86, 0.85); */
   height: 70px;
   transition: top 0.15s ease-out;
+  z-index: 99;
+  transition: background-color 500ms ease-in, box-shadow 100ms linear,
+    top 100ms linear;
 }
 
 .wrapper {
@@ -25,10 +35,48 @@ main {
   flex: 1;
   align-items: center;
   /* background-color: rgb(0, 0, 0); */
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 10px;
+  margin-right: 10px;
   row-gap: 10px;
+  margin-top: 50px;
+  /* display: flex;
+  gap: 50px; */
 }
+
+@media only screen and (min-width: 600px) {
+  .nav-container {
+    padding-right: 50px;
+    padding-left: 50px;
+  }
+  .wrapper {
+    margin-left: 50px;
+    margin-right: 50px;
+    /* gap: 0; */
+  }
+}
+
+@media only screen and (min-width: 1100px) {
+  .nav-container {
+    padding-right: 100px;
+    padding-left: 100px;
+  }
+  .wrapper {
+    margin-left: 100px;
+    margin-right: 100px;
+    /* gap: 20px; */
+  }
+}
+
+/* @media only screen and (min-width: 2000px) {
+  .nav-container {
+    padding-right: 100px;
+    padding-left: 100px;
+  }
+  .wrapper {
+    margin-left: 100px;
+    margin-right: 100px;
+  }
+} */
 
 .nav-item {
   margin: 5px;
@@ -36,14 +84,14 @@ main {
   cursor: pointer;
 }
 
-.nav-item:hover{
-  color: rgb(52, 179, 157);
+.nav-item:hover {
+  color: #fba92c;
 }
 
 [id]::before {
-  content: '';
+  content: "";
   display: block;
-  height:      75px;
+  height: 75px;
   margin-top: -75px;
   visibility: hidden;
 }
@@ -53,11 +101,11 @@ main {
     top: 0;
   }
   to {
-    top: -70px
+    top: -70px;
   }
 }
 
- .to-top {
+.to-top {
   bottom: 0;
   cursor: pointer;
   margin: 0 35px 15px 0;
@@ -77,4 +125,7 @@ main {
   transition: all 0.2s ease-in-out;
 }
 
-
+.btn-resume {
+  margin-left: 10px;
+  font-weight: 500;
+}
