--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,9 +1,7 @@
-<div class="content-container" style="padding-left: 25px; padding-right: 25px">
-  <h3>Get In Touch</h3>
+<h3>Get In Touch</h3>
 
-  <p style="text-align: center; padding: 25px">
-    I’m currently looking for any new opportunities, my inbox is always open.
-    Whether you have a question or just want to say hi, I’ll try my best to get
-    back to you!
-  </p>
-</div>
+<p class="text text-b" style="text-align: center">
+  I’m currently looking for any new opportunities, my inbox is always open.
+  Whether you have a question or just want to say hi, I’ll try my best to get
+  back to you!
+</p>
