--- a/src/styles.css
+++ b/src/styles.css
@@ -1,48 +1,87 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 h3 {
   font-size: 40px;
-  color: lightblue;
+  display: flex;
+  color: #fba92c;
   padding: 15px;
-  padding-left: 35px;
   text-align: center;
+  font-family: monospace;
+  align-items: center;
+  justify-content: center;
 }
 
+h3::after {
+  content: "";
+  display: block;
+  position: relative;
+  width: 5ch;
+  height: 1px;
+  margin-left: 20px;
+  background-color: #fba92c;
+}
+
+h3::before {
+  content: "";
+  display: block;
+  position: relative;
+  width: 5ch;
+  height: 1px;
+  margin-right: 20px;
+  background-color: #fba92c;
+}
 
 .content-container {
   color: white;
   min-height: 150px;
-  /* background-color: #061325; */
-  margin: 50px auto;
+  margin: 100px auto;
   max-width: 900px;
+}
+
+@media only screen and (max-width: 500px) {
+  .content-container {
+    margin: 15px auto;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .content-container {
+    margin: 50px auto;
+  }
 }
 
 span.mat-content {
   flex-direction: column;
 }
 
-mat-expansion-panel {
-  padding-bottom: 10px;
-}
-
-.mat-expansion-panel-header {
-  flex-direction: row !important;
-}
-
 .mat-expansion-panel-body {
-  padding: 10px 24px 0 !important;
-  background-color: #0a192f;
+  padding: 0 24px 0 !important;
+  margin-top: 5px;
 }
 
-.mat-expansion-panel-header:hover{
-  background-color: rgba(52, 179, 158, 0.068);
-  color: antiquewhite;
-
+html,
+body {
+  height: max-content;
+  overflow-x: auto;
 }
 
-.mat-expansion-panel-body p {
-  margin-bottom: 5px;
+.text {
+  line-height: 30px;
+  word-spacing: 2px;
+  font-size: 20px;
+}
+
+.text-b {
+  background-color: #494949;
+  width: fit-content;
+  padding: 0 6px;
 }
