--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -3,18 +3,23 @@
 <div class="about">
   <div class="about_bulletpoints">
     <div class="text text-b">
-      Enthusiastic guy with 10 years of experience in IT industry.
+      Enthusiastic guy with 10 years of experience in the IT industry. For the
+      most part of my IT career, I have worked in the specialization of Quality
+      Assurance, in my latest step I have moved to the development side,
+      focusing on Front-end development
     </div>
-    <div class="text text-b">
-      For the most part of my IT career, I have worked in specialisation of
-      Quality Assurance, in my latest step I have moved to the development side,
-      focusing in Front End development.
-    </div>
+    <br />
     <div class="text text-b">
       Strong logical and analytical thinking to find solutions for various
       problems that can occur in the software development process and find
       solutions to guarantee delivered software quality and good user
-      experience.
+      experience. Every pixel counts
+    </div>
+  </div>
+  <div class="skills-wrapper" style="display: flex; flex-direction: row">
+    <div class="text text-b" style="height: fit-content">Technology focus:</div>
+    <div class="skills text text-b tech">
+      Angular, TypeScript, HTML, CSS, SCSS, JavaScript
     </div>
   </div>
 </div>
