--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -63,20 +63,17 @@ main {
   .wrapper {
     margin-left: 100px;
     margin-right: 100px;
-    /* gap: 20px; */
   }
 }
 
-/* @media only screen and (min-width: 2000px) {
+@media only screen and (max-width: 600px) {
   .nav-container {
-    padding-right: 100px;
-    padding-left: 100px;
+    display: none;
   }
   .wrapper {
-    margin-left: 100px;
-    margin-right: 100px;
+    margin-top: 0;
   }
-} */
+}
 
 .nav-item {
   margin: 5px;
@@ -114,7 +111,6 @@ main {
   opacity: 0;
   width: 60px;
   height: 60px;
-  /* background-color: #020d1c; */
   border-radius: 30px;
   transition: all 0.2s ease-in-out;
   background-image: url(./assets/upper-27.svg);
@@ -128,4 +124,17 @@ main {
 .btn-resume {
   margin-left: 10px;
   font-weight: 500;
+}
+
+footer {
+  text-align: center;
+  color: white;
+  margin-top: 50px;
+  background-color: #2e2e2e;
+}
+
+footer .me {
+  color: #fba92c;
+  font-weight: 500;
+  cursor: pointer;
 }
