--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,17 +1,13 @@
 <div class="intro-wrapper">
   <div class="intro">
-    <h2 class="slideUp">
-      <div class="text-b" style="color: #fba92c">Hi, my name is</div>
-      <h1 class="text-b" style="font-size: 60px">Gunars Lazdans</h1>
+    <h2>
+      <div class="text-b yellow">Hi, my name is</div>
+      <h1 class="my-name text-b slideUp">Gunars Lazdans</h1>
       <span class="text-b long"> I'm a </span>
-      <span class="text-b long" style="color: #fba92c">Fronted Developer</span>
+      <span class="text-b long yellow">Front-end Developer</span>
       <span class="text-b long">
-        with powers of bringing designs to life and finding the best solutions
-        to meet customer needs</span
+        focusing on creating web pages and their components using Angular and TypeScript</span
       ><br />
-      <!-- <span class="text-b long" style="margin-top: 15px; color: #fba92c"
-        >Scroll down found out more</span
-      > -->
     </h2>
   </div>
 
