--- a/src/app/education/education.component.css
+++ b/src/app/education/education.component.css
@@ -1,12 +1,13 @@
 .ed-wrapper {
   display: flex;
   flex-direction: column;
+  gap: 25px;
 }
 
 .pic-weapper img {
   width: 300px;
   height: 300px;
-  border-radius: 150px;
+  border-radius: 15px;
   border: 5px solid #fba92c;
   background-color: #fba92c;
 }
@@ -16,7 +17,7 @@
   width: 300px;
   height: 300px;
   opacity: 0;
-  border-radius: 150px;
+  border-radius: 15px;
   transition: 0.5s ease;
   background-color: rgba(251, 169, 44, 0.25);
 }
@@ -32,14 +33,14 @@ div.pic-weapper:hover div.overlay {
 }
 
 .ed-item {
-  padding: 0 25px 25px 25px;
   max-width: 620px;
 }
 
 .ed-main-wrapper {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
+  padding: 25px;
 }
 
 .ed-item-name {
