--- a/src/app/intro/intro.component.css
+++ b/src/app/intro/intro.component.css
@@ -1,7 +1,7 @@
 .slideUp {
   -webkit-animation-name: slideUp;
   animation-name: slideUp;
-  animation-duration: 0.5s;
+  animation-duration: 1s;
   animation-timing-function: ease-in-out;
 }
 
@@ -12,13 +12,9 @@
 .prof img {
   width: 300px;
   height: 300px;
-  border-radius: 150px;
+  border-radius: 15px;
   border: 5px solid #fba92c;
   background-color: #fba92c;
-}
-
-.intro {
-  /* display: flex; */
 }
 
 .intro-wrapper {
@@ -45,6 +41,16 @@
 
 .long {
   font-size: 19px;
+}
+
+.my-name {
+  font-size: 60px;
+  line-height: 0.7;
+  margin: 15px 0;
+}
+
+.yellow {
+  color: #fba92c;
 }
 
 @-webkit-keyframes slideUp {
