--- a/src/app/work-exp/work-exp.component.html
+++ b/src/app/work-exp/work-exp.component.html
@@ -1,4 +1,4 @@
-<h3>Work Experiance</h3>
+<h3>Work Experience</h3>
 <mat-accordion>
   <mat-expansion-panel
     hideToggle
@@ -15,7 +15,8 @@
       </div>
       <div class="place-industry">
         <a [href]="job.ref" target="_blank" class="place-title">
-          "{{ job.place }}"</a>
+          "{{ job.place }}"
+        </a>
         <div class="header-industry">- {{ job.industry }}</div>
       </div>
       <span>{{ job.location }}</span>
