--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -105,7 +105,7 @@ main {
 .to-top {
   bottom: 0;
   cursor: pointer;
-  margin: 0 35px 15px 0;
+  margin: 0 9px 15px 0;
   position: fixed;
   right: 0;
   opacity: 0;
@@ -137,4 +137,93 @@ footer .me {
   color: #fba92c;
   font-weight: 500;
   cursor: pointer;
+}
+
+.hamburger-menu {
+  position: fixed;
+  z-index: 99;
+}
+
+@media only screen and (min-width: 600px) {
+  .hamburger-menu {
+    display: none;
+  }
+  .to-top{
+    margin: 0 35px 15px 0;
+  }
+}
+
+#menu__toggle {
+  opacity: 0;
+}
+#menu__toggle:checked + .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked + .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0deg);
+}
+#menu__toggle:checked + .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+  right: 0 !important;
+}
+.menu__btn {
+  position: fixed;
+  top: 40px;
+  right: 20px;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  z-index: 100;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #fba92c;
+  transition-duration: .25s;
+  z-index: 100;
+}
+.menu__btn > span::before {
+  content: '';
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 8px;
+}
+.menu__box {
+  display: block;
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 300px;
+  height: 100%;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  background-color: #ECEFF1;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+  transition-duration: .25s;
+  z-index: 99;
+}
+.menu__item {
+  display: block;
+  padding: 12px 24px;
+  color: #333;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+  transition-duration: .25s;
+  text-align: end;
+}
+.menu__item:hover {
+  background-color: #CFD8DC;
 }
