--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -15,11 +15,13 @@
       solutions to guarantee delivered software quality and good user
       experience. Every pixel counts
     </div>
-  </div>
-  <div class="skills-wrapper" style="display: flex; flex-direction: row">
-    <div class="text text-b" style="height: fit-content">Technology focus:</div>
-    <div class="skills text text-b tech">
-      Angular, TypeScript, HTML, CSS, SCSS, JavaScript
+    <br />
+    <div class="text text-b">
+      Technology focus:
+      <br />
+      <span class="tech">
+        Angular TypeScript HTML CSS SCSS JavaScript FireBase
+      </span>
     </div>
   </div>
 </div>
