--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,17 +1,24 @@
 <div class="intro-wrapper">
   <div class="intro">
     <h2>
-      <div class="text-b yellow">Hi, my name is</div>
+      <div class="text-b yellow slideUp">Hi, my name is</div>
       <h1 class="my-name text-b slideUp">Gunars Lazdans</h1>
-      <span class="text-b long"> I'm a </span>
-      <span class="text-b long yellow">Front-end Developer</span>
-      <span class="text-b long">
-        focusing on creating web pages and their components using Angular and TypeScript</span
-      ><br />
+      <div class="text-b long slideUp3" style="float: left">I'm a</div>
+      <div
+        class="text-b long yellow slideUp3"
+        style="float: left; margin-left: 5px; margin-right: 5px"
+      >
+        Front-end Developer
+      </div>
+      <div class="text-b long slideUp3" style="background-color: transparent">
+        focusing on creating web pages and their components using Angular and
+        TypeScript
+      </div>
+      <br />
     </h2>
   </div>
 
-  <div class="prof">
+  <div class="prof slideUp3">
     <img src="assets/me-prof2.png" alt="Me" />
   </div>
 </div>
