--- a/src/app/intro/intro.component.css
+++ b/src/app/intro/intro.component.css
@@ -5,6 +5,13 @@
   animation-timing-function: ease-in-out;
 }
 
+.slideUp3 {
+  -webkit-animation-name: slideUpX;
+  animation-name: slideUpX;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+}
+
 .prof {
   margin-left: 25px;
 }
@@ -13,7 +20,7 @@
   width: 300px;
   height: 300px;
   border-radius: 15px;
-  border: 5px solid #fba92c;
+  border: 3px solid #fba92c;
   background-color: #fba92c;
 }
 
@@ -57,16 +64,16 @@
   0% {
     -webkit-transform-origin: 0 0;
     transform-origin: 0 0;
-    -webkit-transform: translateY(-20%);
-    transform: translateY(-20%);
+    -webkit-transform: translateX(20%);
+    transform: translateX(20%);
     opacity: 0;
   }
 
   100% {
     -webkit-transform-origin: 0 0;
     transform-origin: 0 0;
-    -webkit-transform: translateY(0%);
-    transform: translateY(0%);
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
     opacity: 1;
   }
 }
@@ -74,16 +81,52 @@
   0% {
     -webkit-transform-origin: 0 0;
     transform-origin: 0 0;
-    -webkit-transform: translateY(20%);
-    transform: translateY(20%);
+    -webkit-transform: translateX(-20%);
+    transform: translateX(-20%);
     opacity: 0;
   }
 
   100% {
     -webkit-transform-origin: 0 0;
     transform-origin: 0 0;
-    -webkit-transform: translateY(0%);
-    transform: translateY(0%);
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes slideUpX {
+  0% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(-20%);
+    transform: translateX(-20%);
+    opacity: 0;
+  }
+
+  100% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+@keyframes slideUpX {
+  0% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(20%);
+    transform: translateX(20%);
+    opacity: 0;
+  }
+
+  100% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
     opacity: 1;
   }
 }
