--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -2,21 +2,33 @@
 
 <div class="about">
   <div class="about_bulletpoints">
-    <div class="text text-b">
+    <div
+      inViewport
+      (inViewportAction)="this.addClass($event)"
+      class="text text-b"
+    >
       Enthusiastic guy with 10 years of experience in the IT industry. For the
       most part of my IT career, I have worked in the specialization of Quality
       Assurance, in my latest step I have moved to the development side,
       focusing on Front-end development
     </div>
     <br />
-    <div class="text text-b">
+    <div
+      inViewport
+      (inViewportAction)="this.addClass($event)"
+      class="text text-b"
+    >
       Strong logical and analytical thinking to find solutions for various
       problems that can occur in the software development process and find
       solutions to guarantee delivered software quality and good user
       experience. Every pixel counts
     </div>
     <br />
-    <div class="text text-b">
+    <div
+      inViewport
+      (inViewportAction)="this.addClass($event)"
+      class="text text-b"
+    >
       Technology focus:
       <br />
       <span class="tech">
