--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -46,3 +46,110 @@
     /* height: 300px; */
   }
 }
+
+.proj-cont.inactive {
+  visibility: hidden;
+}
+
+.proj-cont.active {
+  /* visibility: hidden; */
+  animation: 1s fadeIn ease-in-out;
+
+  /* visibility: visible; */
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+.proj-img.bets.active {
+  -webkit-animation-name: slideUpX;
+  animation-name: slideUpX;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+}
+
+.proj-img.bovada.active {
+  -webkit-animation-name: slideUpX;
+  animation-name: slideUpY;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+}
+
+@-webkit-keyframes slideUpX {
+  0% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    opacity: 0;
+  }
+
+  100% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+@keyframes slideUpX {
+  0% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(50%);
+    transform: translateX(50%);
+    opacity: 0;
+  }
+
+  100% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes slideUpY {
+  0% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(50%);
+    transform: translateX(50%);
+    opacity: 0;
+  }
+
+  100% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+@keyframes slideUpY {
+  0% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    opacity: 0;
+  }
+
+  100% {
+    -webkit-transform-origin: 0 0;
+    transform-origin: 0 0;
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
