--- a/src/app/work-exp/work-exp.component.html
+++ b/src/app/work-exp/work-exp.component.html
@@ -1,6 +1,8 @@
 <h3>Work Experience</h3>
 <mat-accordion>
   <mat-expansion-panel
+    inViewport
+    (inViewportAction)="this.addClass($event)"
     hideToggle
     *ngFor="let job of this.experiances; let i = index"
   >
