--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -8,9 +8,9 @@
       class="text text-b"
     >
       Enthusiastic guy with 10 years of experience in the IT industry. For the
-      most part of my IT career, I have worked in the specialization of Quality
-      Assurance, in my latest step I have moved to the development side,
-      focusing on Front-end development
+      major part of my IT career, I have worked in the field of Quality
+      Assurance but in my latest carrier change I have moved to Front-end
+      development
     </div>
     <br />
     <div
