--- a/src/app/intro/intro.component.css
+++ b/src/app/intro/intro.component.css
@@ -19,9 +19,9 @@
 .prof img {
   width: 300px;
   height: 300px;
-  border-radius: 15px;
-  border: 3px solid #fba92c;
-  background-color: #fba92c;
+  border-radius: 150px;
+  /* border: 3px solid #fba92c; */
+  /* background-color: #fba92c; */
 }
 
 .intro-wrapper {
@@ -39,6 +39,13 @@
     justify-content: center;
     display: flex;
     padding: 25px 0;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .intro {
+    margin-left: 50px;
+    margin-right: 50px;
   }
 }
 
