--- a/src/app/work-exp/work-exp.component.css
+++ b/src/app/work-exp/work-exp.component.css
@@ -21,6 +21,7 @@ mat-expansion-panel .mat-expanded {
 .header-industry {
   color: #fba92c;
   padding-left: 5px;
+  transition: color 0.5s ease-in;
 }
 
 .mat-expansion-panel-header:hover .header-industry,
@@ -34,9 +35,11 @@ mat-expansion-panel-header {
   margin-top: 10px;
   border: #504f4f 2px solid;
   background-color: #494949b2;
+  transition: background-color 0.5s ease-in;
 }
 
 .mat-expansion-panel-header:hover {
+  transition: background-color 0.2s ease-in, color 0.2s ease-in;
   background-color: #fba92c;
   color: white;
   /* border: #fba92c 2px solid; */
@@ -44,6 +47,7 @@ mat-expansion-panel-header {
 }
 
 .mat-expansion-panel-header.mat-expanded:hover {
+  transition: background-color 0.2s ease-in, color 0.2s ease-in;
   background-color: #fba92c;
   color: #ffffff;
   border-radius: 5px;
