--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -11,7 +11,7 @@
         Front-end Developer
       </div>
       <div class="text-b long slideUp3" style="background-color: transparent">
-        focusing on creating web pages and their components using Angular and
+        focusing on creating web pages and components using Angular and
         TypeScript
       </div>
       <br />
@@ -20,5 +20,9 @@
 
   <div class="prof slideUp3">
     <img src="assets/me-prof2.png" alt="Me" />
+    <div class="spinner v1"></div>
+    <div class="spinner v2"></div>
+    <div class="spinner v3"></div>
+    <div class="spinner v4"></div>
   </div>
 </div>
