--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -8,9 +8,8 @@
       class="text text-b"
     >
       Enthusiastic guy with 10 years of experience in the IT industry. For the
-      major part of my IT career, I have worked in the field of Quality
-      Assurance but in my latest carrier change I have moved to Front-end
-      development
+      major part of my IT career I have worked in the field of Quality Assurance
+      but in my latest career change I have moved to Front-end development
     </div>
     <br />
     <div
@@ -32,7 +31,12 @@
       Technology focus:
       <br />
       <span class="tech">
-        Angular TypeScript HTML CSS SCSS JavaScript FireBase
+        <span class="skill">TypeScript</span>
+        <span class="skill">HTML</span>
+        <span class="skill">CSS</span>
+        <span class="skill">SCSS</span>
+        <span class="skill">JavaScript</span>
+        <span class="skill">FireBase</span>
       </span>
     </div>
   </div>
