--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -148,7 +148,7 @@ footer .me {
   .hamburger-menu {
     display: none;
   }
-  .to-top{
+  .to-top {
     margin: 0 35px 15px 0;
   }
 }
@@ -187,15 +187,15 @@ footer .me {
   width: 100%;
   height: 2px;
   background-color: #fba92c;
-  transition-duration: .25s;
+  transition-duration: 0.25s;
   z-index: 100;
 }
 .menu__btn > span::before {
-  content: '';
+  content: "";
   top: -8px;
 }
 .menu__btn > span::after {
-  content: '';
+  content: "";
   top: 8px;
 }
 .menu__box {
@@ -208,22 +208,22 @@ footer .me {
   margin: 0;
   padding: 80px 0;
   list-style: none;
-  background-color: #ECEFF1;
-  box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
-  transition-duration: .25s;
+  background-color: #eceff1;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+  transition-duration: 0.25s;
   z-index: 99;
 }
 .menu__item {
   display: block;
   padding: 12px 24px;
   color: #333;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 20px;
   font-weight: 600;
   text-decoration: none;
-  transition-duration: .25s;
+  transition-duration: 0.25s;
   text-align: end;
 }
 .menu__item:hover {
-  background-color: #CFD8DC;
+  background-color: #cfd8dc;
 }
